--- a/index.html
+++ b/index.html
@@ -15,139 +15,150 @@
             <h3>How well do you know your films?</h3>
         </div>
     </header>
-    <main class="container">
-        <!-- first question -->
-        <section class="question-container">
-            <div class="question-header director-header-one"></div>
-            <div class="question-options">
-                <h5>Which of these films did he not make?</h5>
-                <div>
-                    <div class="question-options-block">
-                        <label for="readyplayerone">Ready Player 1</label>
-                        <input type="radio" name="spielberg" id="readyplayerone">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="savingprivateryan">Saving Private Ryan</label>
-                        <input type="radio" name="spielberg" id="savingprivateryan">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="fightclub">Fight Club</label>
-                        <input type="radio" name="spielberg" id="fightclub">
-                    </div>
-                </div>
-            </div>
-        </section>
+    <form action="" class="container">
 
-        <!-- second question -->
-        <section class="question-container">
-                    <div class="question-header director-header-two"></div>
-                    <div class="question-options">
-                        <h5>Which of these films did he not make?</h5>
-                        <div>
-                            <div class="question-options-block">
-                                <label for="interstellar">interstellar</label>
-                                <input type="radio" name="nolan" id="interstellar">
-                            </div>
-                            <div class="question-options-block">
-                                <label for="inception">inception</label>
-                                <input type="radio" name="nolan" id="inception">
-                            </div>
-                            <div class="question-options-block">
-                                <label for="thematrix">The Matrix</label>
-                                <input type="radio" name="nolan" id="thematrix">
-                            </div>
+        <div class="main-form">
+            <!-- first question -->
+            <section class="question-container">
+                <div class="question-header director-header-one"></div>
+                <div class="question-options">
+                    <h5>Which of these films did he not make?</h5>
+                    <div>
+                        <div class="question-options-block">
+                            <label for="readyplayerone">Ready Player 1</label>
+                            <input type="radio" name="spielberg" id="readyplayerone" value="readyplayerone">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="savingprivateryan">Saving Private Ryan</label>
+                            <input type="radio" name="spielberg" id="savingprivateryan" value="savingprivateryan">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="fightclub">Fight Club</label>
+                            <input type="radio" name="spielberg" id="fightclub" value="fightclub">
                         </div>
                     </div>
-        </section>
+                </div>
+            </section>
 
-        <!-- third question -->
-        <section class="question-container">
-            <div class="question-header director-header-three"></div>
-            <div class="question-options">
-                <h5>Which of these films did he not make?</h5>
-                <div>
-                    <div class="question-options-block">
-                        <label for="kingkong">King Kong</label>
-                        <input type="radio" name="jackson" id="kingkong">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="lordoftherings">The Lord of the Rings</label>
-                        <input type="radio" name="jackson" id="lordoftherings">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="starwars">Star Wars: The Force Unwakens</label>
-                        <input type="radio" name="jackson" id="starwars">
+            <!-- second question -->
+            <section class="question-container">
+                        <div class="question-header director-header-two"></div>
+                        <div class="question-options">
+                            <h5>Which of these films did he not make?</h5>
+                            <div>
+                                <div class="question-options-block">
+                                    <label for="interstellar">interstellar</label>
+                                    <input type="radio" name="nolan" id="interstellar" value="interstellar">
+                                </div>
+                                <div class="question-options-block">
+                                    <label for="inception">inception</label>
+                                    <input type="radio" name="nolan" id="inception" value="inception">
+                                </div>
+                                <div class="question-options-block">
+                                    <label for="thematrix">The Matrix</label>
+                                    <input type="radio" name="nolan" id="thematrix" value="thematrix">
+                                </div>
+                            </div>
+                        </div>
+            </section>
+
+            <!-- third question -->
+            <section class="question-container">
+                <div class="question-header director-header-three"></div>
+                <div class="question-options">
+                    <h5>Which of these films did he not make?</h5>
+                    <div>
+                        <div class="question-options-block">
+                            <label for="kingkong">King Kong</label>
+                            <input type="radio" name="jackson" id="kingkong" value="kingkong">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="lordoftherings">The Lord of the Rings</label>
+                            <input type="radio" name="jackson" id="lordoftherings" value="lordoftherings">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="starwars">Star Wars: The Force Unwakens</label>
+                            <input type="radio" name="jackson" id="starwars" value="starwars">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- fourth question -->
-        <section class="question-container">
-            <div class="question-header director-header-four"></div>
-            <div class="question-options">
-                <h5>Which of these films did he not make?</h5>
-                <div>
-                    <div class="question-options-block">
-                        <label for="taxidriver">Taxi Driver</label>
-                        <input type="radio" name="scorsesee" id="taxidriver">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="wolfofwallstreet">The Wolf of Wall Street</label>
-                        <input type="radio" name="scorsesee" id="wolfofwallstreet">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="scarface">Scarface</label>
-                        <input type="radio" name="scorsesee" id="scarface">
+            <!-- fourth question -->
+            <section class="question-container">
+                <div class="question-header director-header-four"></div>
+                <div class="question-options">
+                    <h5>Which of these films did he not make?</h5>
+                    <div>
+                        <div class="question-options-block">
+                            <label for="taxidriver">Taxi Driver</label>
+                            <input type="radio" name="scorsesee" id="taxidriver" value="taxidriver">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="wolfofwallstreet">The Wolf of Wall Street</label>
+                            <input type="radio" name="scorsesee" id="wolfofwallstreet" value="wolfofwallstreet">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="scarface">Scarface</label>
+                            <input type="radio" name="scorsesee" id="scarface" value="scarface">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- fifth question -->
-        <section class="question-container">
-            <div class="question-header director-header-five"></div>
-            <div class="question-options">
-                <h5>Which of these films did he not make?</h5>
-                <div>
-                    <div class="question-options-block">
-                        <label for="theshining">The Shining</label>
-                        <input type="radio" name="kubrick" id="theshining">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="fullmetaljacket">Full Metal Jacket</label>
-                        <input type="radio" name="kubrick" id="fullmetaljacket">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="planetoftheapes">Planet of the Apes</label>
-                        <input type="radio" name="kubrick" id="planetoftheapes">
+            <!-- fifth question -->
+            <section class="question-container">
+                <div class="question-header director-header-five"></div>
+                <div class="question-options">
+                    <h5>Which of these films did he not make?</h5>
+                    <div>
+                        <div class="question-options-block">
+                            <label for="theshining">The Shining</label>
+                            <input type="radio" name="kubrick" id="theshining" value="theshining">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="fullmetaljacket">Full Metal Jacket</label>
+                            <input type="radio" name="kubrick" id="fullmetaljacket" value="fullmetaljacket">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="planetoftheapes">Planet of the Apes</label>
+                            <input type="radio" name="kubrick" id="planetoftheapes" value="planetoftheapes">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- sixth question -->
-        <section class="question-container">
-            <div class="question-header director-header-six"></div>
-            <div class="question-options">
-                <h5>Which of these films did he not make?</h5>
-                <div>
-                    <div class="question-options-block">
-                        <label for="hurtlocker">The Hurt Locker</label>
-                        <input type="radio" name="bigelow" id="hurtlocker">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="zerodarkthirty">Zero Dark Thirty</label>
-                        <input type="radio" name="bigelow" id="zerodarkthirty">
-                    </div>
-                    <div class="question-options-block">
-                        <label for="jarhead">Jarhead</label>
-                        <input type="radio" name="bigelow" id="jarhead">
+            <!-- sixth question -->
+            <section class="question-container">
+                <div class="question-header director-header-six"></div>
+                <div class="question-options">
+                    <h5>Which of these films did she not make?</h5>
+                    <div>
+                        <div class="question-options-block">
+                            <label for="hurtlocker">The Hurt Locker</label>
+                            <input type="radio" name="bigelow" id="hurtlocker" value="hurtlocker">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="zerodarkthirty">Zero Dark Thirty</label>
+                            <input type="radio" name="bigelow" id="zerodarkthirty" value="zerodarkthirty">
+                        </div>
+                        <div class="question-options-block">
+                            <label for="jarhead">Jarhead</label>
+                            <input type="radio" name="bigelow" id="jarhead" value="jarhead">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
+        <button type="submit">Submit Answers!</button>
+    </form>
 
-    </main>    
+    <div class="user-score-container">
+        <h2>Your score out of 6 is: <span class="user-score"></span></h2>
+    </div>
+
+    <script src="js/main.js"></script>
+
+
 </body>
 </html>
