--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
         <div class="main-form">
             <!-- first question -->
             <section class="question-container">
-                <div class="question-header director-header-one"></div>
+                <div class="question-header director-header-one">
+                    <div id="spielbergtag" class="director-tag">
+                        <p>Steven Spielberg</p>
+                    </div>
+                </div>
                 <div class="question-options">
+                    <svg onclick="showDirector(this, spielbergtag)" id="qmarkone" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="question-circle" class="svg-inline--fa fa-question-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"></path></svg>
                     <h5>Which of these films did he not make?</h5>
                     <div>
                         <div class="question-options-block">
@@ -42,16 +47,21 @@
 
             <!-- second question -->
             <section class="question-container">
-                        <div class="question-header director-header-two"></div>
+                        <div class="question-header director-header-two">
+                            <div id="nolantag" class="director-tag">
+                                <p>Christopher Nolan</p>
+                            </div>
+                        </div>
                         <div class="question-options">
+                            <svg onclick="showDirector(this, nolantag)" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="question-circle" class="svg-inline--fa fa-question-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"></path></svg>
                             <h5>Which of these films did he not make?</h5>
                             <div>
                                 <div class="question-options-block">
-                                    <label for="interstellar">interstellar</label>
+                                    <label for="interstellar">Interstellar</label>
                                     <input type="radio" name="nolan" id="interstellar" value="interstellar">
                                 </div>
                                 <div class="question-options-block">
-                                    <label for="inception">inception</label>
+                                    <label for="inception">Inception</label>
                                     <input type="radio" name="nolan" id="inception" value="inception">
                                 </div>
                                 <div class="question-options-block">
@@ -64,8 +74,13 @@
 
             <!-- third question -->
             <section class="question-container">
-                <div class="question-header director-header-three"></div>
+                <div class="question-header director-header-three">
+                    <div id="jacksontag" class="director-tag">
+                        <p>Peter Jackson</p>
+                    </div>
+                </div>
                 <div class="question-options">
+                    <svg onclick="showDirector(this, jacksontag)" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="question-circle" class="svg-inline--fa fa-question-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"></path></svg>
                     <h5>Which of these films did he not make?</h5>
                     <div>
                         <div class="question-options-block">
@@ -86,8 +101,14 @@
 
             <!-- fourth question -->
             <section class="question-container">
-                <div class="question-header director-header-four"></div>
+                <div class="question-header director-header-four">
+                    <div id="scorseseetag" class="director-tag">
+                        <p>Martin Scorsesee</p>
+                    </div>
+                </div>
                 <div class="question-options">
+                    <svg onclick="showDirector(this, scorseseetag)" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="question-circle" class="svg-inline--fa fa-question-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"></path></svg>
+
                     <h5>Which of these films did he not make?</h5>
                     <div>
                         <div class="question-options-block">
@@ -108,8 +129,14 @@
 
             <!-- fifth question -->
             <section class="question-container">
-                <div class="question-header director-header-five"></div>
+                <div class="question-header director-header-five">
+                    <div id="kubriktag" class="director-tag">
+                        <p>Stanley Kubrick</p>
+                    </div>
+                </div>
                 <div class="question-options">
+                    <svg onclick="showDirector(this, kubriktag)" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="question-circle" class="svg-inline--fa fa-question-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"></path></svg>
+
                     <h5>Which of these films did he not make?</h5>
                     <div>
                         <div class="question-options-block">
@@ -130,8 +157,13 @@
 
             <!-- sixth question -->
             <section class="question-container">
-                <div class="question-header director-header-six"></div>
+                <div class="question-header director-header-six">
+                    <div id="bigelowtag" class="director-tag">
+                        <p>Kathryn Bigelow</p>
+                    </div>
+                </div>
                 <div class="question-options">
+                    <svg onclick="showDirector(qmarkthree, bigelowtag)" id="qmarkthree" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="question-circle" class="svg-inline--fa fa-question-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"></path></svg>
                     <h5>Which of these films did she not make?</h5>
                     <div>
                         <div class="question-options-block">
