add numbers to question containers

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <!-- first question -->
             <section class="question-container">
                 <div class="question-header director-header-one">
+                    <div class="container-number"><h5>1</h5></div>
                     <div id="spielbergtag" class="director-tag">
                         <p>Steven Spielberg</p>
                     </div>
@@ -48,6 +49,7 @@
             <!-- second question -->
             <section class="question-container">
                         <div class="question-header director-header-two">
+                            <div class="container-number"><h5>2</h5></div>
                             <div id="nolantag" class="director-tag">
                                 <p>Christopher Nolan</p>
                             </div>
@@ -75,6 +77,7 @@
             <!-- third question -->
             <section class="question-container">
                 <div class="question-header director-header-three">
+                    <div class="container-number"><h5>3</h5></div>
                     <div id="jacksontag" class="director-tag">
                         <p>Peter Jackson</p>
                     </div>
@@ -102,6 +105,7 @@
             <!-- fourth question -->
             <section class="question-container">
                 <div class="question-header director-header-four">
+                    <div class="container-number"><h5>4</h5></div>
                     <div id="scorseseetag" class="director-tag">
                         <p>Martin Scorsesee</p>
                     </div>
@@ -130,6 +134,7 @@
             <!-- fifth question -->
             <section class="question-container">
                 <div class="question-header director-header-five">
+                    <div class="container-number"><h5>5</h5></div>
                     <div id="kubriktag" class="director-tag">
                         <p>Stanley Kubrick</p>
                     </div>
@@ -158,6 +163,7 @@
             <!-- sixth question -->
             <section class="question-container">
                 <div class="question-header director-header-six">
+                    <div class="container-number"><h5>6</h5></div>
                     <div id="bigelowtag" class="director-tag">
                         <p>Kathryn Bigelow</p>
                     </div>
